# fuzzy-deep-thinker

./: .gitignore  EXECUTIVE_SUMMARY.zh-CN.md  README.md  README.zh-CN.md  pyproject.toml
docs/: ACTIVE_EXPERIMENTS.md  ASCEND_NPU_ENV.md  LITERATURE_NOTES_ZH.md  PHASE1A.md  PHASE1B.md  PHASE1D_LADDER_RESULTS.md  PHASE2_DUAL_TRACK.md  PHASE2_RESULTS_REPORT_ZH.md  PHASE3_DIAGNOSTICS_AND_RECHECK_ZH.md  QWEN_48H_HARD_LADDER_RUN_20260627_ZH.md  QWEN_48H_LARGE_HARD_LADDER_RUN_20260627_ZH.md  QWEN_INTEGRATION.md  RESEARCH_RATIONALE_ZH.md
docs/research/: FUZZY_DEEP_THINKER_RESEARCH_NOTE_ZH.md
scripts/: launch_qwen_48h_large_matrix.sh  launch_qwen_48h_matrix.sh  run_phase1a_smoke.sh  run_phase1b_direct_curve.sh  run_phase1d_ladder_matrix.sh  run_phase2a_ladder_scale.sh  run_phase2b_pointer_matrix.sh  run_qwen_baseline_pack.sh  run_qwen_long_single.sh  run_qwen_lora_matrix.sh  run_qwen_smoke.sh  summarize_qwen_long_run.py
src/clt/: __init__.py  data.py  tasks.py  tiny_model.py  train_tiny.py
src/fdt/: data.py  tasks.py  train_qwen.py  train_tiny.py
tests/: test_data_and_formats.py  test_tasks.py  test_train_qwen.py
