[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "fuzzy-deep-thinker"
version = "0.1.0"
description = "Synthetic task infrastructure for Fuzzy Deep Thinker experiments"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
